--- a/home.html
+++ b/home.html
@@ -5,24 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>United Prosperity Planet</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type ="image/png" href="images/favicon logo.png"> <!--This is for a little web icon called a favicon to be displayed at the top of the tab-->
+    <link rel="icon" type ="image/png" href="favicon logo.png"> <!--This is for a little web icon called a favicon to be displayed at the top of the tab-->
     <script src="script.js" defer></script>
+    <script src="scroll.js" defer></script>
 </head>
 <body>
     <header>
         <h1>United Prosperity Planet</h1>
-        <img src="images/logo.png" title = "United Prosperity World Logo" class="logo">  
+        <img src="logo.png" title = "United Prosperity World Logo" class="logo">  
         <nav class="navbar">
              <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="content_ST2.html">Contents Page</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="feedback.html">Feedback</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="pageEditor_ST2.html"> Page Editor </a></li>
-                <li><a href="profile.html"> User Profile</a></li>
-                <li><a href="team.html">Team</a></li>
-                <li><a href="sitemap.html">Sitemap</a></li>
+                <li><a href="https://w2045732.users.ecs.westminster.ac.uk/webDev2024/home.html">Home</a></li>
+                <li><a href="https://w1969488.users.ecs.westminster.ac.uk/webDev/coursework/content%20pagess/content_pages">Contents Page</a></li>
+                <li><a href="https://w2039965.users.ecs.westminster.ac.uk/webDev/gallery.html">Gallery</a></li>
+                <li><a href="https://w2045732.users.ecs.westminster.ac.uk/webDev2024/feedback.html">Feedback</a></li>
+                <li><a href="https://w1969488.users.ecs.westminster.ac.uk/webDev/coursework/shop/shop.html">Shop</a></li>
+                <li><a href="https://w1969488.users.ecs.westminster.ac.uk/webDev/coursework/page%20editorss/page%20editor.html"> Page Editor </a></li>
+                <li><a href="https://w1978999.users.ecs.westminster.ac.uk/WebDev/profile.html"> User Profile</a></li>
+                <li><a href="https://w1978999.users.ecs.westminster.ac.uk/WebDev/team.html">Team</a></li>
+                <li><a href="https://w2039965.users.ecs.westminster.ac.uk/webDev/sitemap.html">Sitemap</a></li>
             </ul>
         </nav>
     </header>
@@ -35,10 +36,26 @@
         We believe that hunger is not just a challenge to overcome but an injustice that demands action. 
         Through the use of this website we will help get closer to our sustainable goal of ending world hunger. </pre>
 <br>
-    <p> <h3>United Nations Sustainable Developmeng Goals</h3>
+    <p> <h3>United Nations Sustainable Development Goals</h3>
        <pre>The United Nations Sustainable Development Goals (SDGs) are a set of 17 global goals adopted in 2015 to address:
         social, economic, and environmental challenges worldwide by 2030. 
-        The goal our Website is currently working upon SDG 2. </pre> 
+        The goal our Website is currently working upon SDG 2. </pre>
+        <pre>
+            Our website contains a shop, a feedback form, page editor, contents page, shop and gallery
+        </pre>
+        <pre>
+            Goal 2: Zero Hunger by 2030
+            Achieving Zero Hunger by 2030 is a critical objective outlined in the United Nations Sustainable Development Goals (SDGs). 
+            However, the global issue of hunger and food insecurity has witnessed a troubling surge since 2015, 
+            exacerbated by a convergence of factors including the COVID-19 pandemic, ongoing wars and recent conflicts,  effects 
+            of climate change, and widening gaps between income inqualities.
+        </pre>
+        <pre>
+            Our website aims to help get closer to the target by allowing for the increase in access to information specifically about
+            poverty and also direct ways to help and donate individuals through our shop. Further information is availble on our contents pages
+            specifically more on statistics of world hunger and current progress. Along with this we have a feedback form for you to be able to
+            directly give us feedback on ways we can also improve our website. 
+        </pre>
         For more information about our sustainble development goal that we are working on visit
         <br>
         <a href="https://sdgs.un.org/goals" target="_blank" title="All United Nations Sustainable Development Goals">
@@ -47,7 +64,11 @@
         <a href="https://sdgs.un.org/goals/goal2#progress_and_info" target="_blank" title="Sustainble Development Goal 2">
         <img src = "SDG2.png" width="225px"  style="float:centre;">
         </a>
+
+    
     </p>
+<br>
+
     </main>
     <footer> 
         <h2>Website is created by Group YSNU</h2>
@@ -59,5 +80,6 @@
         </pre>
         <p>Page by Sikandar Ali</p>
     </footer>
+    <button id="scrollBtn" onclick="scrollToTop()">Back to Top</button>
 </body>
 </html>
